2009-01-08  Marek Habersack  <mhabersack@novell.com>

	* configure.in: added the --with-remove-display configure
	parameter to enable removing of the DISPLAY variable
	from the mod-mono-server backend's environment. Fixes bug #464225

	* src/mod_mono.c (fork_mod_mono_server): remove the DISPLAY
	variable from the child process environment if mod_mono was
	compiled with REMOVE_DISPLAY defined. Fixes bug #464225

2008-10-27 Gonzalo Paniagua Javier <gonzalo@novell.com>

	* src/mod_mono.c: hush warnings.

2008-09-25  Joshua Tauberer  <jit@occams.info>

	* src/mod_mono.c: Typo in error message "droping" now "dropping".

2008-09-22  Juraj Skripsky  <js@hotfeet.ch>

	* mod_mono.conf.in: Add new file types (as registered in
	/etc/mono/2.0/web.config).

2008-07-14  Joshua Tauberer  <jit@occams.info>

	* src/mod_mono.c: Always acquire a lock at the start of processing
	a request. The active requests counter function now assumes the
	lock is already aquired. Also added a accepting_requests flag
	to the dashboard so that xsp configurations can be paused. Now
	when restarting mod-mono-server from the control panel, the
	configuration is set to not accepting requests (503s returned)
	until after the restart. This fixed a problem that when requests
	came in during a restart, mod-mono-server would never successfully
	come back but it would keep getting forked. The flag can also
	be turned on and off through the control panel.

2008-07-14  Marek Habersack  <mhabersack@novell.com>

	* src/mod_mono.c (write_string_to_buffer, send_initial_data): use
	32-bit integers explicitly.

2008-07-11  Marek Habersack  <mhabersack@novell.com>

	* src/mod_mono.h (PROTOCOL_VERSION): bumped to 9

	* src/mod_mono.c: added new structure, initial_data_info, used to
	optimize the send_initial_data function.
	(write_string_to_buffer): added new parameter, str_length, which
	optionally provides the string length.
	(get_table_send_size, write_table_to_buffer): serialized table